--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,15 @@ body {
     );
   }
 }
+.sticky__header {
+  width: 100%;
+  height: 100%;
+  line-height: 80px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999999;
+  box-shadow: 3px 3px -8px 3px #ddd;
+  background:transparent;
+  padding-top: 1px;
+}
