--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,11 @@ body {
 
 @layer components {
   .caption_label {
-    @apply font-normal text-base md:text-lg leading-relaxed tracking-[-0.32px] align-middle pt-[30px] pb-[53.87px];
+    @apply font-normal text-center md:text-lg leading-relaxed tracking-[-0.32px] pt-[30px] pb-[53.87px];
   }
 
   .tag {
-    @apply w-[5.2625em] h-[2em] mt-[0.25em] ml-[1em] md:ml-[5.0756em] rounded-full bg-[hsla(210,100%,99%,1)] shadow-[0_0.0625em_0.1875em_0_hsla(220,4%,14%,0.16)] text-center font-medium text-sm md:text-base leading-[1.5em] align-middle;
+    @apply w-[5.2625em] rounded-full bg-[hsla(210,100%,99%,1)] shadow-[0_0.0625em_0.1875em_0_hsla(220,4%,14%,0.16)] text-center font-medium;
   }
 
   .global_icon {
